--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1232,6 +1232,25 @@ textarea.form-input::-webkit-resizer { display: none; }
 /**
  * responsive larger than 450px screen
  */
+@media (min-width: 350px) {
+
+  /**
+   * client
+   */
+
+  .clients-item { min-width: calc(33.33% - 10px); }
+
+
+
+  /**
+   * #PORTFOLIO, BLOG 
+   */
+
+  .project-img,
+  .blog-banner-box { height: auto; }
+
+} 
+
 
 @media (min-width: 450px) {
 
